--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 </svg>  
             
             <div class="arrow-holder">
-                <img src="src/arrow.svg" alt="">
+                <img src="src/img/arrow.svg" alt="">
                     
             </div>
 
