--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <div class="animation-holder">
 
         <div class="lines-holder">
-            <svg id="Layer_1" class="path" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 720 648">
+            <svg id="Layer_1" class="path" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 720 648" aria-hidden="true">
                 <defs>
                     <style>
                       .st0 {
