--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             </div>
             <div class="quote chair">
                 <p> <div class="quote-mark">&ldquo;</div>
-                We are at a critical point in scientific history, poised to make major discoveries about the brain which will improve human lives. Brain Canada plays a vital role in this progress, acting as a trusted partner that unites a nation-wide community of scientists, clinicians, stakeholders, and funders.”We are at a critical point in scientific history, poised to make major discoveries about the brain which will improve human lives. Brain Canada plays a vital role in this progress, acting as a trusted partner that unites a nation-wide community of scientists, clinicians, stakeholders, and funders.&rdquo;</p>
+                We are at a critical point in scientific history, poised to make major discoveries about the brain which will improve human lives. Brain Canada plays a vital role in this progress, acting as a trusted partner that unites a nation-wide community of scientists, clinicians, stakeholders, and funders.&rdquo;</p>
                 <p class="quote-name-title">Naomi Azrieli, O.C., DPhil <br>
                 Brain Canada Chair</p> 
             </div>
