--- a/fr/index.html
+++ b/fr/index.html
@@ -668,8 +668,8 @@
         </div>
         <footer>
             <div class="column1">
-                <h2>Bonded in Vision, <br>
-                Boundless in Possibility</h2>
+                <h2>Liés par la vision, <br>
+                d’infinies possibilités</h2>
                 <p>Ce rapport couvre une période de 12 mois allant du 1er avril 2024 au 31 mars 2025. </p>
                 <p>La production de ce rapport annuel a été rendue possible grâce au soutien financier de Santé Canada par l’intermédiaire du Fonds canadien de recherche sur le cerveau. Les opinions exprimées dans ce document ne représentent pas nécessairement celles du ministre de la Santé ni du gouvernement du Canada.</p>
                 <p>La Fondation Brain Canada est un organisme de bienfaisance national enregistré qui appuie la recherche sur le cerveau au Canada en finançant des travaux novateurs capables de changer la donne.</p>
