--- a/fr/index.html
+++ b/fr/index.html
@@ -162,7 +162,7 @@
                     </div>
                     
                 </div>
-                <button class="more-less" id="chair-button" onclick="showHide('chair', 'small', 'En savoir plus')">En savoir plus ▼</span></button>
+                <button class="more-less" id="chair-button" onclick="showHide('chair', 'small', 'Plus')">Plus ▼</span></button>
 
             </div>
             <div class="quote chair">
@@ -208,7 +208,7 @@
 
                     </div>
 
-                <button class="more-less" id="ceo-button" onclick="showHide('ceo', 'small', 'En savoir plus')">En savoir plus ▼</span></button>
+                <button class="more-less" id="ceo-button" onclick="showHide('ceo', 'small', 'Plus')">Plus ▼</span></button>
 
             </div>
             <div class="quote ceo">
@@ -358,7 +358,7 @@
                         <p class="no-bottom-margin">Dans le Budget 2024, le gouvernement du Canada, par l’intermédiaire de Santé Canada, s’est engagé à renouveler le mandat de la Fondation Brain Canada jusqu’en 2028. De 2024 à 2028, la Fondation Brain Canada consacrera une enveloppe totale de 160 millions de dollars à la recherche sur le cerveau. La Fondation Brain Canada utilise cet investissement pour réunir des partenaires, des donateurs et des chercheurs qui font progresser notre compréhension du cerveau et développent des solutions innovantes et commercialisables pour traiter ses maladies et troubles.</p>
                     </div>
 
-                    <button class="more-less" id="approach-button" onclick="showHide('approach', 'small', 'En savoir plus')">En savoir plus ▼</span></button>
+                    <button class="more-less" id="approach-button" onclick="showHide('approach', 'small', 'Plus')">Plus ▼</span></button>
                     </div>
 
                     <div class="approach-diagram">
@@ -437,7 +437,7 @@
                                 <p>La sensibilité au stress chronique est associée à des niveaux plus élevés d’inflammation dans l’organisme et à un affaiblissement de la barrière hémato-encéphalique (BHE) qui laisse cette inflammation pénétrer dans le cerveau, selon les recherches menées par la Dre Caroline Ménard (lauréate d’une subvention dans le cadre du programme Futurs leaders canadiens de la recherche sur le cerveau de la Fondation Azrieli en 2020) et son équipe. La résilience au stress est liée au maintien de l’intégrité de la barrière cérébrale, et ce maintien est facilité par une augmentation des récepteurs CB1 sur les astrocytes, des cellules en forme d’étoile qui tapissent la BHE comme une barrière. La Dre Ménard espère que ces résultats contribueront au développement de traitements ciblés contre la dépression et l’anxiété afin d’aider les 30 à 50 % de personnes pour lesquelles les traitements actuels ne sont pas efficaces.</p>
                             </div>
 
-                            <img src="./src/img/menard.jpg" alt="" class="research-img">
+                            <img src="../src/img/menard.jpg" alt="" class="research-img">
                         </div>
                 </div>
                 <div class="research-section" id="ch-partners">
@@ -453,7 +453,7 @@
                             <h4>Découvertes révolutionnaires sur la maladie d’Alzheimer</h4>
                             <p>Un projet de recherche dirigé par le Dr Sylvain Baillet, financé par le programme international de bourses de recherche de l’Alzheimer’s Association en partenariat avec la Fondation Brain Canada, a permis d’acquérir de nouvelles connaissances sur les changements précoces qui surviennent dans le cerveau dans le cas de la maladie d’Alzheimer. Le Dr Sylvain Baillet et son équipe ont étudié des personnes âgées en bonne santé présentant un risque de développer la maladie d’Alzheimer et ont découvert qu’une accumulation précoce d’amyloïde dans le cerveau était liée à une augmentation de l’activité cérébrale. Cependant, ils ont constaté que, lorsque la protéine tau s’accumule également, en particulier dans les zones liées à la mémoire, l’activité cérébrale ralentit et les premiers signes de déclin cognitif se manifestent. Ces résultats, qui reflètent les tendances observées dans les études animales, nous aident à mieux comprendre comment la maladie d’Alzheimer se développe avant l’apparition des symptômes, ce qui nous rapproche de la détection précoce et des traitements ciblés pour cette maladie.</p>
                         </div>
-                        <img src="./src/img/baillet.jpg" alt="" class="research-img">
+                        <img src="../src/img/baillet.jpg" alt="" class="research-img">
                     </div>
                 </div>         
                 <div class="research-section" id="com-partners">
@@ -468,7 +468,7 @@
                             <h4>Gérer l’insomnie et la douleur neuropathique</h4>
                             <p>Financés par le CQDM et la Fondation Brain Canada, les travaux de recherche révolutionnaires de la Dre Gabriella Gobbi pourraient transformer le traitement de l’insomnie et de la douleur neuropathique. Le composé qu’elle a découvert cible précisément les récepteurs cérébraux qui contrôlent les rythmes circadiens, favorisant un sommeil profond et réparateur tout en réduisant la douleur chronique à des doses plus faibles. Étant donné que 24 % des Canadiens souffrent de troubles du sommeil et que les traitements de la douleur neuropathique sont limités, cette thérapie à double action répond à d’importants besoins médicaux non satisfaits. La Dre Gobbi et son équipe ont collaboré avec des partenaires universitaires et industriels afin de transformer le composé en une formulation pharmaceutique viable et se préparent désormais à mener les premiers essais cliniques sur des sujets humains.</p>
                         </div>
-                        <img src="./src/img/gobbi.jpg" alt="" class="research-img">
+                        <img src="../src/img/gobbi.jpg" alt="" class="research-img">
                     </div>
                 </div>         
                 <div class="research-section" id="pl-partners">
@@ -480,9 +480,9 @@
                     <div class="case-study" id="breakthrough">
                         <div>
                             <h4>Percées en matière de prévention du suicide</h4>
-                            <p>La Banque de cerveaux Douglas-Bell Canada, unique en son genre, dirigée par le Dr Gustavo Turecki (lauréat d’une subvention de soutien aux plateformes en 2014 et en 2019), abrite plus de 3 600 cerveaux conservés dans les meilleures conditions possibles pour la recherche scientifique de pointe. Elle distribue chaque année plus de 2 000 échantillons de cerveau à des dizaines de chercheurs au Canada et ailleurs dans le monde. Elle a permis d’innombrables percées dans des domaines aussi variés que les effets des adversités précoces sur le cerveau ou les raisons pour lesquelles les disparités dans les taux de dépression et l’efficacité des traitements diffèrent entre les hommes et les femmes. De plus, selon l’Overton Index, la plus grande base de données mondiale sur les politiques et la littérature grise, l’une des publications phares de la Banque de cerveaux a servi de base à des documents politiques sur la prévention du suicide dans le monde entier..</p>
+                            <p>La Banque de cerveaux Douglas-Bell Canada, unique en son genre, dirigée par le Dr Gustavo Turecki (lauréat d’une subvention de soutien aux plateformes en 2014 et en 2019), abrite plus de 3 600 cerveaux conservés dans les meilleures conditions possibles pour la recherche scientifique de pointe. Elle distribue chaque année plus de 2 000 échantillons de cerveau à des dizaines de chercheurs au Canada et ailleurs dans le monde. Elle a permis d’innombrables percées dans des domaines aussi variés que les effets des adversités précoces sur le cerveau ou les raisons pour lesquelles les disparités dans les taux de dépression et l’efficacité des traitements diffèrent entre les hommes et les femmes. De plus, selon l’Overton Index, la plus grande base de données mondiale sur les politiques et la littérature grise, l’une des publications phares de la Banque de cerveaux a servi de base à des documents politiques sur la prévention du suicide dans le monde entier.</p>
                         </div>
-                        <img src="./src/img/turecki.jpg" alt="" class="research-img">
+                        <img src="../src/img/turecki.jpg" alt="" class="research-img">
                     </div>
 
                 </div>            
@@ -491,7 +491,7 @@
                 <h2>Parcours</h2>
                 <h3>Nous avons toujours été tournés vers l’aveni</h3>
                 <div class="slider-wrapper">
-                <div class="animation-item animate">
+                <div class="animation-item animate-pause">
                 <div class="items-holder">
                 <div class="items">
                     <div class="item">
@@ -532,7 +532,7 @@
                     </div>
 
                 </div>
-                  <img src="./src/img/time-line-arrow.svg" alt="">
+                  <img src="../src/img/time-line-arrow.svg" alt="">
 
                 </div>  
 
@@ -576,7 +576,7 @@
                     </div>
 
                 </div>
-                 <img src="./src/img/time-line-arrow.svg" alt="">
+                 <img src="../src/img/time-line-arrow.svg" alt="">
 
                 </div>
 
