--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     </div>
                     
                 </div>
-                <button class="more-less" id="chair-button" onclick="showHide('chair', 'small', 'Read more')">Read more ▼</span></button>
+                <button class="more-less" id="chair-button" onclick="showHide('chair', 'small', 'More')">More ▼</span></button>
 
             </div>
             <div class="quote chair">
@@ -200,7 +200,7 @@
 
                     </div>
 
-                <button class="more-less" id="ceo-button" onclick="showHide('ceo', 'small', 'Read more')">Read more ▼</span></button>
+                <button class="more-less" id="ceo-button" onclick="showHide('ceo', 'small', 'More')">More ▼</span></button>
 
             </div>
             <div class="quote ceo">
@@ -364,7 +364,7 @@
                         <p class="no-bottom-margin">In Budget 2024, the Government of Canada, through Health Canada, committed to renewing Brain Canada&rsaquo;s mandate through to 2028. From 2024&ndash;2028, Brain Canada will establish a total envelope of $160 million for brain research. Brain Canada is using that investment to bring together partners, donors, and researchers who advance our understanding of the brain and develop innovative and commercializable solutions to its diseases and disorders.</p>
                     </div>
 
-                    <button class="more-less" id="approach-button" onclick="showHide('approach', 'small', 'Read more')">Read more ▼</span></button>
+                    <button class="more-less" id="approach-button" onclick="showHide('approach', 'small', 'More')">More ▼</span></button>
                     </div>
 
                     <div class="approach-diagram">
@@ -495,7 +495,7 @@
                 <h2>Our Journey</h2>
                 <h3>The Future Has Always Been Our Horizon</h3>
                 <div class="slider-wrapper">
-                <div class="animation-item animate">
+                <div class="animation-item">
                 <div class="items-holder">
                 <div class="items">
                     <div class="item">
