--- a/fr/index.html
+++ b/fr/index.html
@@ -491,7 +491,7 @@
                 <h2>Parcours</h2>
                 <h3>Nous avons toujours été tournés vers l’aveni</h3>
                 <div class="slider-wrapper">
-                <div class="animation-item animate-pause">
+                <div class="animation-item animate">
                 <div class="items-holder">
                 <div class="items">
                     <div class="item">
