--- a/index.html
+++ b/index.html
@@ -235,7 +235,9 @@
                     <div class="yir-image">
                         <img src="./src/img/light-blue-corner.svg" alt="">
                     </div>
+
                 </div>
+
                 <div class="yir-section yir-process">
                     <div class="yir-image">
                         <img src="./src/img/light-teal-corner.svg" alt="">
@@ -352,7 +354,17 @@
                         <img src="./src/img/light-yellow-corner.svg" alt="">
                     </div>
                 </div>
-                <p style="font-size: .85em;"><sup>1, 2</sup> as reported in the ClinicalTrials.gov database</p>     
+                <div class="inputs-cover-1"></div>    
+                <div class="inputs-cover-2"></div>    
+                <div class="process-cover-1"></div>    
+                <div class="process-cover-2"></div>
+                <div class="results-cover-1"></div>    
+                <div class="results-cover-2"></div>  
+                <div class="outputs-cover-1"></div>    
+                <div class="outputs-cover-2"></div>                 
+                <div class="outcomes-cover-1"></div>    
+                <div class="outcomes-cover-2"></div>                 
+                <p style="font-size: .85em;"><sup>1, 2</sup> as reported in the ClinicalTrials.gov database</p> 
             </div>
 
             <div class="approach">
@@ -420,6 +432,7 @@
                         Brain <br>
                         Health
                     </div>
+                    <div class="diagram-cover"></div>
                     </div>
 
 
@@ -495,7 +508,7 @@
                 <h2>Our Journey</h2>
                 <h3>The Future Has Always Been Our Horizon</h3>
                 <div class="slider-wrapper">
-                <div class="animation-item">
+                <div class="animation-item animate">
                 <div class="items-holder">
                 <div class="items">
                     <div class="item">
