--- a/index.html
+++ b/index.html
@@ -214,6 +214,18 @@
                 <h3>Common Bonds, <br class="hide-wide"> 
                 Uncommon Impacts</h3>
                 <p>April 1, 2024 – March 31, 2025</p>
+                <div class="yir-covers">
+                    <div class="inputs-cover-1"></div>    
+                    <div class="inputs-cover-2"></div>    
+                    <div class="process-cover-1"></div>    
+                    <div class="process-cover-2"></div>
+                    <div class="results-cover-1"></div>    
+                    <div class="results-cover-2"></div>  
+                    <div class="outputs-cover-1"></div>    
+                    <div class="outputs-cover-2"></div>                 
+                    <div class="outcomes-cover-1"></div>    
+                    <div class="outcomes-cover-2"></div>
+                </div>
                 <div class="yir-section yir-inputs">
                     <div class="yir-content">
                         <h4>Inputs</h4>
@@ -353,17 +365,7 @@
                     <div class="yir-image">
                         <img src="./src/img/light-yellow-corner.svg" alt="">
                     </div>
-                </div>
-                <div class="inputs-cover-1"></div>    
-                <div class="inputs-cover-2"></div>    
-                <div class="process-cover-1"></div>    
-                <div class="process-cover-2"></div>
-                <div class="results-cover-1"></div>    
-                <div class="results-cover-2"></div>  
-                <div class="outputs-cover-1"></div>    
-                <div class="outputs-cover-2"></div>                 
-                <div class="outcomes-cover-1"></div>    
-                <div class="outcomes-cover-2"></div>                 
+                </div>               
                 <p style="font-size: .85em;"><sup>1, 2</sup> as reported in the ClinicalTrials.gov database</p> 
             </div>
 
