--- a/fr/index.html
+++ b/fr/index.html
@@ -509,7 +509,7 @@
                 <h2>Parcours</h2>
                 <h3>Nous avons toujours été tournés vers l’aveni</h3>
                 <div class="slider-wrapper">
-                <div class="animation-item animate">
+                <div class="animation-item">
                 <div class="items-holder">
                 <div class="items">
                     <div class="item">
@@ -609,11 +609,11 @@
             <h3>Un grand merci pour votre<br> soutien désintéressé</h3>
             <div class="wide-content">
                 <p class="no-bottom-margin">Nous tenons à exprimer notre profonde gratitude à nos généreux donateurs qui contribuent à l’avancement de la science. Chaque collaboration se veut un exemple éloquent du rôle que l’on peut jouer dans l’avenir de la santé cérébrale, au Canada et partout ailleurs.</p>
-                <h4 class="hide-narrow">Donateurs pour la période du 1<sup>er</sup> avril 2024 au 31 mars 2025</h4>
+                <h4 class="hide-narrow">Donateurs pour la période du 1<sup>er</sup> avril 2024 au 31 mars 2025</h4>
             </div>
             <div class="donor-list" id="donor-list">
                 <div>
-                    <h4>$100,000+ (Lead Donors)</h4>
+                    <h4>100 000 $ et plus (grands donateurs)</h4>
                     <ul class="hidden-list">
                         <li>American Iron & Metal (AIM) /AIM Recyclage</li>
                         <li>Fondation Azrieli/li>
@@ -670,7 +670,7 @@
 
           
             </div>
-            <button class="more-less hide-wide donor-button" id="donor-list-button" onclick="showHide('donor-list', 'small', 'Donateurs pour la période du 1er avril 2024 au 31 mars 2025')">Donateurs pour la période du 1<sup>er</sup> avril 2024 au 31 mars 2025 ▼</button>
+            <button class="more-less hide-wide donor-button" id="donor-list-button" onclick="showHide('donor-list', 'small', 'long')">Donateurs pour la période du 1<sup>er</sup>&nbsp;avril&nbsp;2024&nbsp;au&nbsp;31&nbsp;mars&nbsp;2025 ▼</button>
             <div class="donor-quote hide-wide">
                 <p> <div class="quote-mark">&laquo;</div>
                 Un jour, Warren Buffet a dit : « Quelqu’un s’assoit à l’ombre aujourd’hui parce que quelqu’un d’autre a planté un arbre il y a longtemps. » De même, notre famille investit aujourd’hui dans la recherche, convaincue que cela portera ses fruits demain.&nbsp;&raquo;</p>
@@ -696,22 +696,22 @@
                 <a href="hhttps://www.canada.ca/fr/sante-canada.html" target="health_canada"><img src="../src/img/healthcanada.svg" alt="Santé Canada"></a>
             </div>
             <div class="column2">
-            <h3>Suivez-nous :</h3>
-            <p><a href="#">Téléchargez le rapport annuel</a></p>
-            <p><a href="https://braincanada.ca/fr/a-propos/publications/
-">Accédez aux anciens rapports</a></p>
-            <p><a href="https://braincanada.ca/
-">Visitez Braincanada.ca</a></p>
-            <p><a href="https://braincanada.akaraisin.com/ui/donnermaintenant
-">Faites un don</a></p>
-            <p><a href="https://braincanada.ca/fr/contactez/">S’inscrire</a></p>
-            <div class="social">
-                <a href="https://www.linkedin.com/company/brain-canada/" target="linkedIn"><img src="../src/img/linkedin.svg" alt="LinkedIn"></a>
-                <a href="https://x.com/BrainCanada" target="X"><img src="../src/img/twitter.svg" alt="X (formerly Twitter)"></a>
-                <a href="https://www.facebook.com/brain.canada" target="Facebook"><img src="../src/img/facebook.svg" alt="Facebook"></a>
-                <a href="https://www.instagram.com/braincanada" target="Instagram"><img src="../src/img/instagram.svg" alt="Instagram"></a>
-            </div>
-            <p class="copyright">Brain Canada © 2025</p>
+                <h3>Suivez-nous :</h3>
+                <p><a href="#">Téléchargez le rapport annuel</a></p>
+                <p><a href="https://braincanada.ca/fr/a-propos/publications/
+    ">Accédez aux anciens rapports</a></p>
+                <p><a href="https://braincanada.ca/
+    ">Visitez Braincanada.ca</a></p>
+                <p><a href="https://braincanada.akaraisin.com/ui/donnermaintenant
+    ">Faites un don</a></p>
+                <p><a href="https://braincanada.ca/fr/contactez/">S’inscrire</a></p>
+                <div class="social">
+                    <a href="https://www.linkedin.com/company/brain-canada/" target="linkedIn"><img src="../src/img/linkedin.svg" alt="LinkedIn"></a>
+                    <a href="https://x.com/BrainCanada" target="X"><img src="../src/img/twitter.svg" alt="X (formerly Twitter)"></a>
+                    <a href="https://www.facebook.com/brain.canada" target="Facebook"><img src="../src/img/facebook.svg" alt="Facebook"></a>
+                    <a href="https://www.instagram.com/braincanada" target="Instagram"><img src="../src/img/instagram.svg" alt="Instagram"></a>
+                </div>
+                <p class="copyright">Brain Canada © 2025</p>
             </div>
 
         </footer>
