--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
                 <h2>Our Journey</h2>
                 <h3>The Future Has Always Been Our Horizon</h3>
                 <div class="slider-wrapper">
-                <div class="animation-item animate">
+                <div class="animation-item">
                 <div class="items-holder">
                 <div class="items">
                     <div class="item">
