--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                             <div class="wide-close">
                                 <p>Sincerely,</p>
                                 
-                                <p>Viviane Poupon, PhD <br>
+                                <p>Viviane Poupon, PH. D. <br>
                             Brain Canada President & CEO</p> 
                             </div>
 
@@ -206,7 +206,7 @@
             <div class="quote ceo">
                 <p> <div class="quote-mark">&ldquo;</div>
                     Brain Canada fosters a platform for partnership, driving bold science that unites researchers, donors and communities. Together, we’re accelerating breakthroughs in brain health and transforming discoveries into real-world impact.&rdquo;</p>
-                    <p class="quote-name-title">Viviane Poupon, PhD <br>
+                    <p class="quote-name-title">Viviane Poupon, PH. D. <br>
                         Brain Canada President & CEO</p> 
             </div> 
             <div class="yir">
