--- a/index.html
+++ b/index.html
@@ -123,9 +123,13 @@
 
             <div class="vision-mission">
                 <h2><span class="green-yellow">Our</span> Vision</h2>
-                <p>Bold Science for Brain Health</p>
+                <p class="vm-text">Bold Science for Brain Health</p>
                 <h2><span class="teal">Our</span> <span class="gold">Mission</span></h2>
-                <p>Accelerating, Amplifying and <br>Funding&nbsp;Brain Research Across <br>Canada </p>
+                <p class="vm-text">Accelerating, Amplifying and <br>Funding&nbsp;Brain Research Across <br>Canada </p>
+                <div class="text-cover">
+                    <div class="gradient-cover"></div>
+                    <div class="solid-cover"></div>
+                </div>
             </div>
             <div class="message chair">
                 <h2>Our Chair’s Message</h2>
@@ -166,6 +170,10 @@
                 We are at a critical point in scientific history, poised to make major discoveries about the brain which will improve human lives. Brain Canada plays a vital role in this progress, acting as a trusted partner that unites a nation-wide community of scientists, clinicians, stakeholders, and funders.&rdquo;</p>
                 <p class="quote-name-title">Naomi Azrieli, O.C., DPhil <br>
                 Brain Canada Chair</p> 
+                <div class="text-cover">
+                    <div class="gradient-cover"></div>
+                    <div class="solid-cover"></div>
+                </div>
             </div>
             <div class="message ceo">
                 <h2>Our President & CEO’s Message</h2>
@@ -203,11 +211,15 @@
                 <button class="more-less" id="ceo-button" onclick="showHide('ceo', 'small', 'More')">More ▼</span></button>
 
             </div>
-            <div class="quote ceo">
+            <div class="quote ceo" id="ceo-quote">
                 <p> <div class="quote-mark">&ldquo;</div>
                     Brain Canada fosters a platform for partnership, driving bold science that unites researchers, donors and communities. Together, we’re accelerating breakthroughs in brain health and transforming discoveries into real-world impact.&rdquo;</p>
                     <p class="quote-name-title">Viviane Poupon, PH. D. <br>
                         Brain Canada President & CEO</p> 
+                    <div class="text-cover">
+                        <div class="gradient-cover"></div>
+                        <div class="solid-cover"></div>
+                    </div>
             </div> 
             <div class="yir">
                 <h2>Our Year in Review</h2>
