--- a/fr/index.html
+++ b/fr/index.html
@@ -164,7 +164,7 @@
 
             </div>
             <div class="quote chair">
-                <p> <div class="quote-mark">&laquo;</div>
+                <p> <div class="quote-mark-fr">&laquo;</div>
                 Nous sommes à un moment crucial de l’histoire scientifique, sur le point de faire des découvertes majeures sur le cerveau qui amélioreront la vie des gens. La Fondation Brain Canada joue un rôle essentiel dans ces progrès, en tant que partenaire de confiance réunissant une communauté nationale de scientifiques, de cliniciens, de parties prenantes et de bailleurs de fonds. &raquo;</p>
                 <p class="quote-name-title">Naomi Azrieli, O.C., DPhil <br>
                 Présidente du conseil <br>
@@ -197,7 +197,7 @@
                             <div class="wide-close">
                                 <p>Cordialement,</p>
                                 
-                                <p>Viviane Poupon, PH. D. <br>
+                                <p>Viviane Poupon, Ph. D. <br>
                             Présidente-directrice générale de <br>
                             la Fondation Brain Canada</p> 
                             </div>
@@ -210,7 +210,7 @@
 
             </div>
             <div class="quote ceo">
-                <p> <div class="quote-mark">&laquo;</div>
+                <p> <div class="quote-mark-fr">&laquo;</div>
                     La Fondation Brain Canada favorise la création d’une plateforme de partenariat qui encourage la recherche scientifique audacieuse et rassemble les chercheurs, les donateurs et les communautés. Ensemble, nous accélérons les avancées dans le domaine de la santé cérébrale et transformons les découvertes en résultats concrets. &raquo;</p>
                     <p class="quote-name-title">Viviane Poupon, PhD <br>
                         Présidente-directrice générale de <br>
@@ -657,7 +657,7 @@
                 <p class="no-bottom-margin"><a href="https://braincanada.ca/fr/nos-donateurs/">Consultez notre liste complète de donateurs</a></p>
 
                 <div class="donor-quote hide-narrow">
-                    <p> <div class="quote-mark">&laquo;</div>
+                    <p> <div class="quote-mark-fr">&laquo;</div>
                     Un jour, Warren Buffet a dit : « Quelqu’un s’assoit à l’ombre aujourd’hui parce que quelqu’un d’autre a planté un arbre il y a longtemps. » De même, notre famille investit aujourd’hui dans la recherche, convaincue que cela portera ses fruits demain.&nbsp;&raquo;</p>
                     <p class="donor-quote-name-title"><span class="bold">Mireille et Murray Steinberg</span> <br>
                     Fondation de la famille Mireille et Murray Steinberg    
@@ -670,7 +670,7 @@
             </div>
             <button class="more-less hide-wide donor-button" id="donor-list-button" onclick="showHide('donor-list', 'small', 'long')">Donateurs pour la période du 1<sup>er</sup>&nbsp;avril&nbsp;2024&nbsp;au&nbsp;31&nbsp;mars&nbsp;2025 ▼</button>
             <div class="donor-quote hide-wide">
-                <p> <div class="quote-mark">&laquo;</div>
+                <p> <div class="quote-mark-fr">&laquo;</div>
                 Un jour, Warren Buffet a dit : « Quelqu’un s’assoit à l’ombre aujourd’hui parce que quelqu’un d’autre a planté un arbre il y a longtemps. » De même, notre famille investit aujourd’hui dans la recherche, convaincue que cela portera ses fruits demain.&nbsp;&raquo;</p>
                 <p class="donor-quote-name-title"><span class="bold">Mireille et Murray Steinberg</span> <br>
                 Fondation de la famille Mireille et Murray Steinberg    
